--- a/index.html
+++ b/index.html
@@ -693,7 +693,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -702,104 +701,32 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-palette"></i>
-              </div>
-              <h3><a href="service-details.html">Creative Design</a></h3>
-              <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Sed porttitor lectus nibh lorem ipsum dolor sit amet consectetur.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
+              <h3>Some music</h3>
+              <audio controls>
+                <source src="assets/media/audio_resume.mp3" type="audio/mpeg">
+              </audio>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="250">
             <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-code-slash"></i>
-              </div>
-              <h3><a href="service-details.html">Web Development</a></h3>
-              <p>Nulla porttitor accumsan tincidunt. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem donec rutrum congue leo.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
+              
+              <h3>YouTube video</h3>
+              <iframe width="350" height="215" src="https://www.youtube.com/embed/XD6ASbQtKxw?si=WS1gD9wxs2dUi1-4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-graph-up"></i>
-              </div>
-              <h3><a href="service-details.html">Digital Marketing</a></h3>
-              <p>Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Proin eget tortor risus pellentesque habitant morbi.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-shield-check"></i>
-              </div>
-              <h3><a href="service-details.html">Brand Strategy</a></h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="250">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-people"></i>
-              </div>
-              <h3><a href="service-details.html">Consulting</a></h3>
-              <p>Donec sollicitudin molestie malesuada. Cras ultricies ligula sed magna dictum porta vivamus magna justo lacinia eget.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="bi bi-headset"></i>
-              </div>
-              <h3><a href="service-details.html">Support Services</a></h3>
-              <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Mauris blandit aliquet elit eget tincidunt nibh pulvinar.</p>
-              <div class="service-link">
-                <a href="service-details.html">
-                  <span>Explore</span>
-                  <i class="bi bi-arrow-right"></i>
-                </a>
-              </div>
+              <h3>Short video of a game I made</h3>
+              <video width="350" controls>
+                <source src="assets/media/video_resume.mp4" type="video/mp4">
+              </video>
             </div>
           </div><!-- End Service Item -->
 
         </div>
-
       </div>
-
     </section><!-- /Services Section -->
 
     <!-- Faq Section -->
