--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#portfolio">Portfolio
+            <ol>
+              <li>Game Development</li>
+              <li>ArchiCAD design projects</li>
+              <li>Graphical Design</li>
+            </ol>
+          </a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -165,20 +171,20 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <ul class="nav nav-pills resume-navigation justify-content-center" id="resume-resume-tabs" role="tablist" data-aos="fade-up" data-aos-delay="200">
+            <ol class="nav nav-pills resume-navigation justify-content-center" id="resume-resume-tabs" role="tablist" data-aos="fade-up" data-aos-delay="200">
               <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="resume-experience-tab" data-bs-toggle="pill" data-bs-target="#resume-experience" type="button" role="tab" aria-controls="resume-experience" aria-selected="true">
-                  <span class="nav-number">01</span>
+                  <!--<span class="nav-number">01</span>-->
                   <span class="nav-label">Experience</span>
                 </button>
               </li>
               <li class="nav-item" role="presentation">
                 <button class="nav-link" id="resume-education-tab" data-bs-toggle="pill" data-bs-target="#resume-education" type="button" role="tab" aria-controls="resume-education" aria-selected="false">
-                  <span class="nav-number">02</span>
+                  <!--<span class="nav-number">02</span>-->
                   <span class="nav-label">Education</span>
                 </button>
               </li>
-            </ul>
+            </ol>
           </div>
         </div>
 
