Add custom CSS and loader to index.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -45,6 +46,7 @@
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
         <h1 class="sitename">MinimalFolio</h1>
+        <span class="loader"></span>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -72,6 +74,8 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
+
+      <div class="movingobj"></div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
